--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript><link rel="stylesheet" href="noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -37,10 +37,9 @@
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
 							<li><a href="tvdata.html">Super Bowl</a></li>
-                            <li><a href="moviecritics.html">Movie Critic</a></li>
+                            				<li><a href="moviecritics.html">Movie Critic</a></li>
 							<li><a href="appmarket.html">App Market</a></li>
 							<li><a href="scala.html">Scala</a></li>
-        					<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/peyton-lewis/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
@@ -57,7 +56,7 @@
 									<h2>My name is Peyton</h2>
 									<p>I have a <b>Bachelor of Science in Mathematics (Statistics)</b> from Arizona State University's School of Mathematical and Statistical Sciences. I am passionate about <b>Data Science</b> and the <b>opportunity to learn</b> even after obtaining my degree. </p>
 								</header>
-								<a href="aboutme.html" class="image main"><img src="images/PeytonHeadshot2020.jpeg" alt="" /></a>
+								<a href="aboutme.html" class="image main"><img src="PeytonHeadshot2020.jpeg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="aboutme.html" class="button large">Learn More</a></li>
 								</ul>
@@ -70,7 +69,7 @@
 										<h2><a href="tvdata.html">Super Bowl<br />
 										Analysis</a></h2>
 									</header>
-									<a href="tvdata.html" class="image fit"><img src="images/TVImage.png" alt="" /></a>
+									<a href="tvdata.html" class="image fit"><img src="TVImage.png" alt="" /></a>
 									<p>A project analyzing TV data relating to superbowl history done through DataCamp.</p>
 									<ul class="actions special">
 										<li><a href="tvdata.html" class="button">See More</a></li>
@@ -80,7 +79,7 @@
 									<header>
 										<h2><a href="moviecritics.html">Movie Critic Analysis</a></h2>
 									</header>
-									<a href="moviecritics.html" class="image fit"><img src="images/moviecriticsseats.jpg" alt="" /></a>
+									<a href="moviecritics.html" class="image fit"><img src="moviecriticsseats.jpg" alt="" /></a>
 									<p>An analysis of the impact different movie elements have on movie critic reviews.</p>
 									<ul class="actions special">
 										<li><a href="moviecritics.html" class="button">See More</a></li>
@@ -91,7 +90,7 @@
 										<h2><a href="appmarket.html">App Market<br />
 										Analysis</a></h2>
 									</header>
-									<a href="appmarket.html" class="image fit"><img src="images/googleplay.png" alt="" /></a>
+									<a href="appmarket.html" class="image fit"><img src="googleplay.png" alt="" /></a>
 									<p>An analysis of the GooglePlay app market.</p>
 									<ul class="actions special">
 										<li><a href="appmarket.html" class="button">See More</a></li>
@@ -102,7 +101,7 @@
 										<h2><a href="scala.html">Scala History<br />
 										Analysis</a></h2>
 									</header>
-									<a href="scala.html" class="image fit"><img src="images/scalalogo.png" alt="" /></a>
+									<a href="scala.html" class="image fit"><img src="scalalogo.png" alt="" /></a>
 									<p>A look into Scala development and its history on Git and GitHub.</p>
 									<ul class="actions special">
 										<li><a href="scala.html" class="button">See More</a></li>
@@ -174,13 +173,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="jquery.min.js"></script>
+			<script src="jquery.scrollex.min.js"></script>
+			<script src="jquery.scrolly.min.js"></script>
+			<script src="browser.min.js"></script>
+			<script src="breakpoints.min.js"></script>
+			<script src="util.js"></script>
+			<script src="main.js"></script>
 
 	</body>
 </html>
