--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<li><a href="scala.html">Scala</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/peyton-lewis/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/peyton-lewis/" class="image fit"><img src="78-780529_white-linkedin-icon-transparent-background-linkedin-icon-white.png" alt="" /></a></li>
 							<li><a href="" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
