--- a/index.html
+++ b/index.html
@@ -109,43 +109,12 @@
 								</article>
 							</section>
 
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="index.html" class="page active">1</a>
-									<a href="index2.html" class="page">2</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">4</a>
-									<a href="index2.html" class="next">Next</a>
-								</div>
-							</footer>
+				
 
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
 						<section class="split contact">
 							<section class="alt">
 								<h3>Location</h3>
@@ -153,13 +122,13 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">peyton502@gmail.com</a></p>
+								<p>peyton502@gmail.com</p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/peyton-lewis/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/peytonlew/peytonlew.github.io" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
